Szponzorok node oldal, logo alignement bugfix

--- a/themes/drupalaton_theme/sass/_drupalaton.scss
+++ b/themes/drupalaton_theme/sass/_drupalaton.scss
@@ -410,9 +410,9 @@ body.page-node {
     position: relative;
   }
   .field-name-field-sponsor-logo {
-    margin-top: -89px;
-    position: absolute;
-    right: 0;
+    float: right;
+    margin-left: 25px;
+    
   }
 }
 
